fix: layout issue

--- a/traflix-web/src/components/ContentDetailModalComponent/MobileDefault.module.scss
+++ b/traflix-web/src/components/ContentDetailModalComponent/MobileDefault.module.scss
@@ -3,17 +3,16 @@
 .main {
   display: flex;
   flex-direction: column;
-  border-radius: 0px 20px 20px 0px;
-  width: 300px;
-  height: calc(100% - 60px);
+  border-radius: 20px 20px 0px 0px;
+  width: 100%;
+  height: calc(45%);
   background-color: white;
-  // overflow-y: scroll;
-
-  z-index: 2;
+  overflow-y: scroll;
+  z-index: 20;
   position: absolute;
-  top: 60px;
-  left: 440px;
+  bottom: 150px;
 }
+
 .contentBox {
   display: flex;
   flex-direction: column;
